# multiDGD

./: .gitignore  LICENSE  README.md  example_notebook.ipynb  pyproject.toml  setup.py
dev_notebooks/: HiChIP_plots.ipynb  TF_mode_analysis.ipynb  save_model_params_to_new_framework.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  references.bib
docs/source/usage/: data.rst  gene2peak.rst  installation.rst  integration.rst  intro.rst  tutorials.rst
docs/source/usage/math/: covariates.rst  customization.rst  dgd.rst  gmm.rst  model.rst  reps.rst  troubleshooting.rst
docs/source/usage/tutorials-folder/: data.rst  integration.rst  plotting.rst  training.rst
multiDGD/: _dgd.py  dgd_setup.json
multiDGD/dataset/: __init__.py  _dataset.py
multiDGD/functions/: __init__.py  _data.py  _predict.py  _train.py
multiDGD/latent/: __init__.py  _gmm.py  _representation.py
multiDGD/nn/: _outputmodules.py
src/: setup.py
src/multiDGD/: __init__.py  _dgd.py
src/multiDGD/dataset/: __init__.py  _dataset.py
src/multiDGD/functions/: __init__.py  _analysis.py  _data.py  _data_manipulation.py  _gene2peak.py  _gene_to_peak_linkage.py  _metrics.py  _predict.py  _train.py
src/multiDGD/latent/: __init__.py  _gmm.py  _representation.py
src/multiDGD/nn/: __init__.py  _decoder.py  _outputmodules.py
src/multiDGD/utils/: __init__.py  model_loading.py
tests/: naive_test.py
tutorials/: example_adata_bonemarrow.ipynb  example_feature_selection.ipynb  example_mapping_new_data.ipynb  example_mudata_mousegast.ipynb  gene2peak.ipynb
tutorials/dev_notebooks/: save_model_params_to_new_framework.ipynb
