[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "multiDGD"
version = "0.0.1"
description = "multi-omics implementation of the encoder-less representation learning using MAP estimation from https://arxiv.org/abs/2110.06672"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Viktoria Schuster"},
]
urls.Source = "https://github.com/Center-for-Health-Data-Science/multiDGD"
urls.Home-page = "https://github.com/Center-for-Health-Data-Science/multiDGD"
dependencies = [
    "anndata",
    "mudata",
    "scanpy",
    "torch",
    # for debug logging (referenced from the issue template)
    "session-info"
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit"
]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["multiDGD"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''